--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where society meets compassion</title>
+    <title>Oasis of Love</title>
+    <link rel="icon" href="images/sandra flower.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
@@ -15,8 +15,10 @@
     <!-- navbar sections starts  -->
     <header class="header">
         <div class="logo">
-           <!--<img src="assets/logosmalldark.png" alt="logo-bookmark">-->
-            <h1>Oasis Of Love</h1> 
+            <a href="#home">
+                <img src="images/sandra logo.png" height="70" width="70">
+                <h1 class="logotext">Oasis Of Love</h1>
+            </a>
         </div>
 
         <nav class="navbar">
@@ -30,16 +32,14 @@
 
         <div class="fas fa-bars" id="menu-btn"></div>
     </header>
-    <!-- navbar sections starts  -->
+    <!-- navbar sections ends  -->
 
    
-    <!-- home section stars  -->
+    <!-- home section starts  -->
 
     <section class="home" id="home">
         <div class="content">
             <h1>Where society meets compassion...</h1>
-            <p>(introduction)</p>
-
         </div>
 
 
@@ -54,8 +54,8 @@
 
     <section class="features" id="features">
         <div class="heading">
-            <h1>Features</h1>
-            <p>Our aim is to make it quick and easy for you to access your favorite websites. your bookmarks sync between your devices so you can access them on the go</p>
+            <h1>About Us</h1>
+            <p>Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
         </div>
 
 
@@ -67,18 +67,28 @@
 
 
             <div class="content">
-                <h1>Bookmark in one click</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sint odit tempora, maiores quos qui quisquam accusamus ad officiis sapiente.</p>
-                <a href="#" class="all-btn">more info</a>
+                <h1>Vision</h1>
+                <p>To make Oasis of Love a fountain for humanitarian acts so as to improve community welfare.</p>
+                <a href="#objectives" class="all-btn">learn more</a>
             </div>
+        </div>
 
             <!-- 1 Tab  -->
 
             <!-- 2 Tab  -->
+            <div class="heading" id="objectives">
+                <h1>Our Objectives</h1>
+            </div>
+
+        <div class="row">    
             <div class="content">
-                <h1>Intelligent search</h1>
-                <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-                <a href="#" class="all-btn">more info</a>
+                <p>1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
+                    2. To combat the stigma concerning health issues and their psychological issues in our societies.<br/>
+                    3. To combat worker depression by giving support and awareness to business and workplace cooperation.<br/>
+                    4. To combat the stigma of young females going to school at ages 10–15 in local villages and rural areas.<br/>
+                    5. To provide a network of compassionate youth who are a community support base.<br/>
+                </p>
+                <a href="#more" class="all-btn">learn more</a>
             </div>
 
             <div class="image">
@@ -92,9 +102,12 @@
             </div>
 
             <div class="content">
-                <h1>Share your bookmarks</h1>
-                <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
-                <a href="#" class="all-btn">more info</a>
+                <p>6. To help children who are in endless circles of poverty and cannot access education.<br/>
+                    7. To help connect societies with poor health care systems and no hospitals with a means of accessing them.<br/>
+                    8. To raise awareness concerning ways to build a much safer environment for our vegetation through the use of creativity and innovation.<br/>
+                    9. To help renovate and support poorly developed care homes, e.g., orphanages, autism centers, or rehabilitation centers.<br/>
+                    10. To spread autism awareness and inclusivity worldwide and in Tanzania.</p>
+                <a href="#" class="all-btn">Donate</a>
             </div>
 
 
@@ -153,10 +166,10 @@
        <div class="box-container">
            <div class="boxx">
                <h3>quick links</h3>
-               <a href="#"><i class="fas fa-chevron-right"></i>home</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>features</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>Media</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>contact</a>
+               <a href="#home"><i class="fas fa-chevron-right"></i>home</a>
+               <a href="#features"><i class="fas fa-chevron-right"></i>About</a>
+               <a href="#Media"><i class="fas fa-chevron-right"></i>Media</a>
+               <a href="#footer"><i class="fas fa-chevron-right"></i>contact</a>
             </div>
 
            <div class="boxx">
