More changes to style and format
A lot more still needs to be done

--- a/index.html
+++ b/index.html
@@ -37,15 +37,25 @@
    
     <!-- home section starts  -->
 
-    <section class="home" id="home">
-        <div class="content">
-            <h1>Where society meets compassion...</h1>
+    <section class="home" id="home" style="
+    background: url(images/visionphoto.JPG);
+    background-size: cover;
+    height: 700px
+    ">
+        <div class="heading" style="
+        width: 70%;
+        margin: auto;
+        ">
+            <h1 style="
+            color: #000000;
+            ">Where society meets compassion...</h1>
         </div>
-
+<!--
 
         <div class="image">
-            <img src="images/sandra sloagn.jpg" alt="illustration-hero">
+            <img src="images/sandra sloagn.jpg" alt="illustration-hero" height="400" width="400">
         </div>
+        -->
     </section>
 
     <!-- home section ends -->
@@ -53,16 +63,23 @@
     <!-- features section starts  -->
 
     <section class="features" id="features">
-        <div class="heading">
-            <h1>About Us</h1>
-            <p>Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
+        <div class="heading" style="
+            background-color: #6CDAE7;
+            border-radius: 15px;
+            width: 70%;
+            margin: auto;
+            ">
+            <h1 style="color: black;">About Us</h1>
+            <p style="color: black;">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
         </div>
 
 
         <div class="row">
             <!-- 1 Tab  -->
             <div class="image">
-                <img src="images/illustration-features-tab-1.svg" alt="illustration-features-tab-1">
+                <img src="images/sandra sloagn.jpg" alt="illustration-features-tab-1" style="
+                border-radius: 30px;
+                ">
             </div>
 
 
@@ -72,48 +89,47 @@
                 <a href="#objectives" class="all-btn">learn more</a>
             </div>
         </div>
-
+    </section>
+    <section class="features" style="background-color: #6CDAE7;"> 
             <!-- 1 Tab  -->
 
-            <!-- 2 Tab  -->
+            <!-- 2 Tab  -->   
             <div class="heading" id="objectives">
-                <h1>Our Objectives</h1>
+                <h1 style="color: black;">Our Objectives</h1>
             </div>
 
-        <div class="row">    
-            <div class="content">
-                <p>1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
-                    2. To combat the stigma concerning health issues and their psychological issues in our societies.<br/>
-                    3. To combat worker depression by giving support and awareness to business and workplace cooperation.<br/>
-                    4. To combat the stigma of young females going to school at ages 10–15 in local villages and rural areas.<br/>
-                    5. To provide a network of compassionate youth who are a community support base.<br/>
-                </p>
-                <a href="#more" class="all-btn">learn more</a>
-            </div>
+            <div class="row">    
+                <div class="content">
+                    <p style="color: black;">1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
+                        2. To combat the stigma concerning health issues and their psychological issues in our societies.<br/>
+                        3. To combat worker depression by giving support and awareness to business and workplace cooperation.<br/>
+                        4. To combat the stigma of young females going to school at ages 10–15 in local villages and rural areas.<br/>
+                        5. To provide a network of compassionate youth who are a community support base.<br/>
+                    </p>
+                    <a href="#more" class="all-btn">learn more</a>
+                </div>
 
-            <div class="image">
-                <img src="images/illustration-features-tab-2.svg" alt="illustration-features-tab-2">
-            </div>
+                <div class="image">
+                    <img src="images/objective1.JPG" alt="illustration-features-tab-2">
+                </div>
 
-            <!-- 2 Tab  -->
+                <!-- 2 Tab  -->
 
-            <div class="image">
-                <img src="images/illustration-features-tab-3.svg" alt="illustration-features-tab-3">
-            </div>
+                <div class="image">
+                    <img src="images/objective2.JPG" alt="illustration-features-tab-3">
+                </div>
 
-            <div class="content">
-                <p>6. To help children who are in endless circles of poverty and cannot access education.<br/>
-                    7. To help connect societies with poor health care systems and no hospitals with a means of accessing them.<br/>
-                    8. To raise awareness concerning ways to build a much safer environment for our vegetation through the use of creativity and innovation.<br/>
-                    9. To help renovate and support poorly developed care homes, e.g., orphanages, autism centers, or rehabilitation centers.<br/>
-                    10. To spread autism awareness and inclusivity worldwide and in Tanzania.</p>
-                <a href="#" class="all-btn">Donate</a>
-            </div>
-
+                <div class="content">
+                    <p style="color: black;">6. To help children who are in endless circles of poverty and cannot access education.<br/>
+                        7. To help connect societies with poor health care systems and no hospitals with a means of accessing them.<br/>
+                        8. To raise awareness concerning ways to build a much safer environment for our vegetation through the use of creativity and innovation.<br/>
+                        9. To help renovate and support poorly developed care homes, e.g., orphanages, autism centers, or rehabilitation centers.<br/>
+                        10. To spread autism awareness and inclusivity worldwide and in Tanzania.</p>
+                    <a href="#" class="all-btn">Donate</a>
+                </div>
+            </div>    
 
             <!-- 3 Tab  -->
-
-        </div>
     </section>
 
 
@@ -162,36 +178,36 @@
 
     <!-- footer section starts  -->
 
-   <section class="footer" id="footer">
+   <section class="footer" id="footer" style="background-color: #6CDAE7;">
        <div class="box-container">
            <div class="boxx">
-               <h3>quick links</h3>
-               <a href="#home"><i class="fas fa-chevron-right"></i>home</a>
-               <a href="#features"><i class="fas fa-chevron-right"></i>About</a>
-               <a href="#Media"><i class="fas fa-chevron-right"></i>Media</a>
-               <a href="#footer"><i class="fas fa-chevron-right"></i>contact</a>
+               <h3 style="color: black;">quick links</h3>
+               <a href="#home" style="color: black;"><i class="fas fa-chevron-right"></i>home</a>
+               <a href="#features" style="color: black;"><i class="fas fa-chevron-right"></i>About</a>
+               <a href="#Media" style="color: black;"><i class="fas fa-chevron-right"></i>Media</a>
+               <a href="#footer" style="color: black;"><i class="fas fa-chevron-right"></i>contact</a>
             </div>
 
            <div class="boxx">
-               <h3>contact info</h3>
-               <a href="#"><i class="fas fa-phone"></i>+123-456-789</a>
-               <a href="#"><i class="fas fa-phone"></i>+111-222-3333</a>
-               <a href="#"><i class="fas fa-envelope"></i>company@example.com</a>
-               <a href="#"><i class="fas fa-envelope"></i>company@example.com</a>
-               <a href="#"><i class="fas fa-map-marker-alt"></i>Dar, Tz - 12345</a>
+               <h3 style="color: black;">contact info</h3>
+               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+123-456-789</a>
+               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+111-222-3333</a>
+               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@example.com</a>
+               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@example.com</a>
+               <a href="#" style="color: black;"><i class="fas fa-map-marker-alt"></i>Dar, Tz - 12345</a>
            </div>
 
            <div class="boxx">
-               <h3>follow us</h3>
-               <a href="#"><i class="fab fa-facebook-f"></i>facebook</a>
-               <a href="#"><i class="fab fa-twitter"></i>facebook</a>
-               <a href="#"><i class="fab fa-instagram"></i>instagram</a>
-               <a href="#"><i class="fab fa-linkedin"></i>linkedin</a>
-               <a href="#"><i class="fab fa-pinterest"></i>pinterest</a>
+               <h3 style="color: black;">follow us</h3>
+               <a href="#" style="color: black;"><i class="fab fa-facebook-f"></i>facebook</a>
+               <a href="#" style="color: black;"><i class="fab fa-twitter"></i>facebook</a>
+               <a href="#" style="color: black;"><i class="fab fa-instagram"></i>instagram</a>
+               <a href="#" style="color: black;"><i class="fab fa-linkedin"></i>linkedin</a>
+               <a href="#" style="color: black;"><i class="fab fa-pinterest"></i>pinterest</a>
            </div>
        </div>
-
-
+    </section>
+    <section class="footer">
        <div class="credit">
           Oasis Of Love | All Rights Reserved
        </div>
