Changes at Rodney's, Compressed Photos
Also, some minor changes here and there

--- a/index.html
+++ b/index.html
@@ -45,17 +45,10 @@
         <div class="heading" style="
         width: 70%;
         margin: auto;
+        padding-bottom: 16rem;
         ">
-            <h1 style="
-            color: #000000;
-            ">Where society meets compassion...</h1>
+            <h1>Where society meets compassion...</h1>
         </div>
-<!--
-
-        <div class="image">
-            <img src="images/sandra sloagn.jpg" alt="illustration-hero" height="400" width="400">
-        </div>
-        -->
     </section>
 
     <!-- home section ends -->
@@ -63,14 +56,11 @@
     <!-- features section starts  -->
 
     <section class="features" id="features">
-        <div class="heading" style="
-            background-color: #6CDAE7;
-            border-radius: 15px;
-            width: 70%;
-            margin: auto;
-            ">
-            <h1 style="color: black;">About Us</h1>
-            <p style="color: black;">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
+        <div class="aboutus">
+            <div class="heading">
+                <h1 style="color: black;">About Us</h1>
+                <p style="color: black;">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
+            </div>
         </div>
 
 
@@ -90,12 +80,18 @@
             </div>
         </div>
     </section>
-    <section class="features" style="background-color: #6CDAE7;"> 
+    <section class="features" style="
+        background-color: #6CDAE7;
+        padding-top: 10rem;
+        padding-bottom: 9rem;" id="objectives"> 
             <!-- 1 Tab  -->
 
             <!-- 2 Tab  -->   
-            <div class="heading" id="objectives">
-                <h1 style="color: black;">Our Objectives</h1>
+            <div class="heading">
+                <h1 style="
+                    color: black;
+                    padding-bottom: 2rem;
+                    ">Our Objectives</h1>
             </div>
 
             <div class="row">    
@@ -112,9 +108,9 @@
                 <div class="image">
                     <img src="images/objective1.JPG" alt="illustration-features-tab-2">
                 </div>
-
+            </div>
                 <!-- 2 Tab  -->
-
+            <div class="row" id="more" style="padding-top: 10rem;">
                 <div class="image">
                     <img src="images/objective2.JPG" alt="illustration-features-tab-3">
                 </div>
@@ -138,9 +134,9 @@
 
     <!-- Medias section starts  -->
 
-    <section class="Media" id="Media">
+    <section class="media" id="Media" style="padding-top: 10rem;">
         <div class="heading">
-            <h1>Media</h1>
+            <h1 style="color: white;">Media</h1>
             <p>Have a glimpse at what our organisation does...</p>
         </div>
 
