--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#features">About</a>
-            <a href="#Media">Media</a>
+            <a href="#media">Media</a>
             <a href="#footer">Contact</a>
             <a href="#" class="btn">Donate</a>
         </nav>
@@ -134,35 +134,43 @@
 
     <!-- Medias section starts  -->
 
-    <section class="media" id="Media" style="padding-top: 10rem;">
-        <div class="heading">
-            <h1 style="color: white;">Media</h1>
+    <section class="media" id="media" style="padding-top: 10rem;">
+        <div class="heading">S
+            <h1>Media</h1>
             <p>Have a glimpse at what our organisation does...</p>
         </div>
 
         <div class="box-container">
             <div class="box">
-                <img src="images/logo-chrome.svg" alt="logo-chrome">
-
-                <h3>Add to Chrome</h3>
-                <p>Minimum Version 63</p>
-                <a href="#" class="all-btn">install</a>
+                <img src="images/media/media1.JPG" alt="log>o-chrome">
             </div>
 
             <div class="box">
-                <img src="images/logo-firefox.svg" alt="logo-firefox">
-
-                <h3>Add to Firefox</h3>
-                <p>Minimum Version 55</p>
-                <a href="#" class="all-btn">install</a>
+                <img src="images/media/media2.JPG" alt="logo-firefox">
             </div>
 
             <div class="box">
-                <img src="images/logo-opera.svg" alt="logo-opera">
+                <img src="images/media/media3.JPG" alt="logo-opera">
+            </div>
 
-                <h3>Add to Opera</h3>
-                <p>Minimum Version 46</p>
-                <a href="#" class="all-btn">install</a>
+            <div class="box">
+                <img src="images/media/media4.JPG" alt="logo-opera">
+            </div>
+
+            <div class="box">
+                <img src="images/media/media5.JPG" alt="logo-opera">
+            </div>
+
+            <div class="box">
+                <img src="images/media/media6.JPG" alt="logo-opera">
+            </div>
+
+            <div class="box">
+                <img src="images/media/media7.JPG" alt="logo-opera">
+            </div>
+
+            <div class="box">
+                <img src="images/media/media8.JPG" alt="logo-opera">
             </div>
         </div>
     </section>
@@ -180,26 +188,22 @@
                <h3 style="color: black;">quick links</h3>
                <a href="#home" style="color: black;"><i class="fas fa-chevron-right"></i>home</a>
                <a href="#features" style="color: black;"><i class="fas fa-chevron-right"></i>About</a>
-               <a href="#Media" style="color: black;"><i class="fas fa-chevron-right"></i>Media</a>
+               <a href="#media" style="color: black;"><i class="fas fa-chevron-right"></i>Media</a>
                <a href="#footer" style="color: black;"><i class="fas fa-chevron-right"></i>contact</a>
             </div>
 
            <div class="boxx">
                <h3 style="color: black;">contact info</h3>
-               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+123-456-789</a>
-               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+111-222-3333</a>
-               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@example.com</a>
-               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@example.com</a>
+               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+255 714 060 960</a>
+               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@gmail.com</a>
                <a href="#" style="color: black;"><i class="fas fa-map-marker-alt"></i>Dar, Tz - 12345</a>
            </div>
 
            <div class="boxx">
                <h3 style="color: black;">follow us</h3>
                <a href="#" style="color: black;"><i class="fab fa-facebook-f"></i>facebook</a>
-               <a href="#" style="color: black;"><i class="fab fa-twitter"></i>facebook</a>
                <a href="#" style="color: black;"><i class="fab fa-instagram"></i>instagram</a>
                <a href="#" style="color: black;"><i class="fab fa-linkedin"></i>linkedin</a>
-               <a href="#" style="color: black;"><i class="fab fa-pinterest"></i>pinterest</a>
            </div>
        </div>
     </section>
