Fixed Light mode
minor design changes too

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <div class="row">    
                 <div class="content">
-                    <p style="color: black;">1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
+                    <p>1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
                         2. To combat the stigma concerning health issues and their psychological issues in our societies.<br/>
                         3. To combat worker depression by giving support and awareness to business and workplace cooperation.<br/>
                         4. To combat the stigma of young females going to school at ages 10–15 in local villages and rural areas.<br/>
@@ -110,13 +110,16 @@
                 </div>
             </div>
                 <!-- 2 Tab  -->
-            <div class="row" id="more" style="padding-top: 10rem;">
+            <div id="more" style="padding-top: 10rem;">
+
+            </div>
+            <div class="row">
                 <div class="image">
                     <img src="images/objective2.JPG" alt="illustration-features-tab-3">
                 </div>
 
                 <div class="content">
-                    <p style="color: black;">6. To help children who are in endless circles of poverty and cannot access education.<br/>
+                    <p>6. To help children who are in endless circles of poverty and cannot access education.<br/>
                         7. To help connect societies with poor health care systems and no hospitals with a means of accessing them.<br/>
                         8. To raise awareness concerning ways to build a much safer environment for our vegetation through the use of creativity and innovation.<br/>
                         9. To help renovate and support poorly developed care homes, e.g., orphanages, autism centers, or rehabilitation centers.<br/>
@@ -135,7 +138,7 @@
     <!-- Medias section starts  -->
 
     <section class="media" id="media" style="padding-top: 10rem;">
-        <div class="heading">S
+        <div class="heading">
             <h1>Media</h1>
             <p>Have a glimpse at what our organisation does...</p>
         </div>
