--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         margin: auto;
         padding-bottom: 16rem;
         ">
-            <h1>Where society meets compassion...</h1>
+            <h1 class="box2">Where society meets compassion...</h1>
         </div>
     </section>
 
@@ -58,8 +58,8 @@
     <section class="features" id="features">
         <div class="aboutus">
             <div class="heading">
-                <h1 style="color: black;">About Us</h1>
-                <p style="color: black;">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
+                <h1 style="color: black;" class="box2">About Us</h1>
+                <p style="color: black;" class="box2">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
             </div>
         </div>
 
@@ -67,15 +67,15 @@
         <div class="row">
             <!-- 1 Tab  -->
             <div class="image">
-                <img src="images/sandra sloagn.jpg" alt="illustration-features-tab-1" style="
+                <img src="images/sandra sloagn.jpg" class="box3" style="
                 border-radius: 30px;
                 ">
             </div>
 
 
             <div class="content">
-                <h1>Vision</h1>
-                <p>To make Oasis of Love a fountain for humanitarian acts so as to improve community welfare.</p>
+                <h1 class="box">Vision</h1>
+                <p class="box">To make Oasis of Love a fountain for humanitarian acts so as to improve community welfare.</p>
                 <a href="#objectives" class="all-btn">learn more</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
 
             <!-- 2 Tab  -->   
             <div class="heading">
-                <h1 style="
+                <h1 class="box2" style="
                     color: black;
                     padding-bottom: 2rem;
                     ">Our Objectives</h1>
@@ -96,7 +96,7 @@
 
             <div class="row">    
                 <div class="content">
-                    <p>1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
+                    <p class="box3">1. To raise awareness about mental health disorders and spread inclusivity concerning them as well.<br/>
                         2. To combat the stigma concerning health issues and their psychological issues in our societies.<br/>
                         3. To combat worker depression by giving support and awareness to business and workplace cooperation.<br/>
                         4. To combat the stigma of young females going to school at ages 10–15 in local villages and rural areas.<br/>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="image">
-                    <img src="images/objective1.JPG" alt="illustration-features-tab-2">
+                    <img src="images/objective1.JPG" class="box">
                 </div>
             </div>
                 <!-- 2 Tab  -->
@@ -115,11 +115,11 @@
             </div>
             <div class="row">
                 <div class="image">
-                    <img src="images/objective2.JPG" alt="illustration-features-tab-3">
+                    <img src="images/objective2.JPG" class="box4">
                 </div>
 
                 <div class="content">
-                    <p>6. To help children who are in endless circles of poverty and cannot access education.<br/>
+                    <p class="box3">6. To help children who are in endless circles of poverty and cannot access education.<br/>
                         7. To help connect societies with poor health care systems and no hospitals with a means of accessing them.<br/>
                         8. To raise awareness concerning ways to build a much safer environment for our vegetation through the use of creativity and innovation.<br/>
                         9. To help renovate and support poorly developed care homes, e.g., orphanages, autism centers, or rehabilitation centers.<br/>
@@ -135,12 +135,12 @@
     <!-- features sectin ends -->
 
 
-    <!-- Medias section starts  -->
+    <!-- medias section starts  -->
 
     <section class="media" id="media" style="padding-top: 10rem;">
         <div class="heading">
-            <h1>Media</h1>
-            <p>Have a glimpse at what our organisation does...</p>
+            <h1 class="box2">Media</h1>
+            <p class="box2">Have a glimpse at what our organisation does...</p>
         </div>
 
         <div class="box-container">
@@ -179,7 +179,7 @@
     </section>
 
 
-    <!-- Medias section ends -->
+    <!-- medias section ends -->
 
 
 
@@ -188,25 +188,24 @@
    <section class="footer" id="footer" style="background-color: #6CDAE7;">
        <div class="box-container">
            <div class="boxx">
-               <h3 style="color: black;">quick links</h3>
-               <a href="#home" style="color: black;"><i class="fas fa-chevron-right"></i>home</a>
-               <a href="#features" style="color: black;"><i class="fas fa-chevron-right"></i>About</a>
-               <a href="#media" style="color: black;"><i class="fas fa-chevron-right"></i>Media</a>
-               <a href="#footer" style="color: black;"><i class="fas fa-chevron-right"></i>contact</a>
+               <h3 class="box2" style="color: black;">quick links</h3>
+               <a class="box" href="#home" style="color: black;"><i class="fas fa-chevron-right"></i>home</a>
+               <a class="box" href="#features" style="color: black;"><i class="fas fa-chevron-right"></i>About</a>
+               <a class="box" href="#media" style="color: black;"><i class="fas fa-chevron-right"></i>Media</a>
             </div>
 
            <div class="boxx">
-               <h3 style="color: black;">contact info</h3>
-               <a href="#" style="color: black;"><i class="fas fa-phone"></i>+255 714 060 960</a>
-               <a href="#" style="color: black;"><i class="fas fa-envelope"></i>company@gmail.com</a>
-               <a href="#" style="color: black;"><i class="fas fa-map-marker-alt"></i>Dar, Tz - 12345</a>
+               <h3 class="box2" style="color: black;">contact info</h3>
+               <a class="box" href="#" style="color: black;"><i class="fas fa-phone"></i>+255 714 060 960</a>
+               <a class="box" href="#" style="color: black;"><i class="fas fa-envelope"></i>sandylin2567@gmail.com</a>
+               <a class="box" href="#" style="color: black;"><i class="fas fa-map-marker-alt"></i>Kinondoni Vijana, Dar es Salaam, Tz</a>
            </div>
 
            <div class="boxx">
-               <h3 style="color: black;">follow us</h3>
-               <a href="#" style="color: black;"><i class="fab fa-facebook-f"></i>facebook</a>
-               <a href="#" style="color: black;"><i class="fab fa-instagram"></i>instagram</a>
-               <a href="#" style="color: black;"><i class="fab fa-linkedin"></i>linkedin</a>
+               <h3 class="box2" style="color: black;">follow us</h3>
+               <a class="box" href="https://wa.me/447523782577" style="color: black;"><i class="fab fa-whatsapp"></i>WhatsApp</a>
+               <a class="box" href="https://www.instagram.com/inclusionclubtz/" style="color: black;"><i class="fab fa-instagram"></i>instagram</a>
+               <a class="box" href="https://www.linkedin.com/in/sandra-lema-426339240/?originalSubdomain=tz" style="color: black;"><i class="fab fa-linkedin"></i>linkedin</a>
            </div>
        </div>
     </section>
