--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="logo">
             <a href="#home">
-                <img src="images/sandra logo.png" height="70" width="70">
+                <img class="logocolor" src="images/sandra logo.png" height="70" width="70">
                 <h1 class="logotext">Oasis Of Love</h1>
             </a>
         </div>
@@ -59,7 +59,7 @@
         <div class="aboutus">
             <div class="heading">
                 <h1 style="color: black;" class="box2">About Us</h1>
-                <p style="color: black;" class="box2">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
+                <p style="color: black; padding-left: 10%; padding-right: 10%; padding-bottom: 5%;" class="box2">Oasis of Love (O.O.L.) is a non-profit organization aimed at improving individual and social well-being for all members of a community. This organization leans closer towards the use of compassion to act as a fountain for humanitarian acts; it advocates for the unity of all members of society and the need to help the ones suffering in the community so as to build a more aware and accepting society.</p>
             </div>
         </div>
 
